src/objects/Geocoder_Log__c.object
<CustomObject>
    <description>04/26/13 TC - This keeps a log of the last geocoding request results.</description>
    <fields>
        <fullName>NameNumber__c</fullName>
        <formula>VALUE(Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NameNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordID__c</fullName>
        <label>RecordID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_URL__c</fullName>
        <description>04/26/13 TC - This is the URL that the geocoding request was made to.</description>
        <label>Request URL</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeStamp__c</fullName>
        <label>TimeStamp</label>
        <type>DateTime</type>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TimeStamp__c</columns>
        <columns>Status__c</columns>
        <columns>RecordID__c</columns>
        <columns>Request_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Geocoder_Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>